--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="ru">
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Расписане</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
