--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 			<input type="submit" name="save" value="Сохранить">
 		</form>
 	</div>
+	<div class="footer">
+	</div>
 	<div class="popup" id="add_schedule">
 		<form class="event_form central_block" name="add_schedule">
 			<label class="event_block">
