--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 	<div class="calendar central_block">
 	</div>
 	<div class="tabs_list central_block">
+		<input type="radio" id="tab_radio_1" name="tab_radio" value="" />
+		<input type="radio" id="tab_radio_2" name="tab_radio" value="" />
 		<ul>
-			<li><a href="#tab_1" class="link_tab">Расписание</a></li>
+			<li><label class="link_tab" for="tab_radio_1">Расписание</label></li>
 			&nbsp;|
-			<li><a href="#tab_2" class="link_tab">События</a></li>
+			<li><label class="link_tab" for="tab_radio_2">События</label></li>
 		</ul>
 		<div class="tab" id="tab_1">
 			<div></div>
